Finished navbar with HTML

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="navbar-menu">
                 <li class="navbar-item">
                     <a href="/" class="navbar-links">
-                        Home
+                        Homes
                     </a>
                 </li>
             </ul>
