--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="navbar-menu">
                 <li class="navbar-item">
                     <a href="/" class="navbar-links">
-                        Homes
+                        Home
                     </a>
                 </li>
             </ul>
