That's it form the nabar with HTML code

--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
                         Home
                     </a>
                 </li>
+                <li class="navbar-item">
+                    <a href="/tech.html" class="navbar-links">
+                        Tech
+                    </a>
+                </li>
+                <li class="navbar-item">
+                    <a href="/" class="nabar-links">
+                        Products
+                    </a>
+                </li>
+                <li class="navbar_btn">
+                    <a href="/" class="button">
+                        Sing up
+                    </a>
+                </li>
             </ul>
         </div>
     </nav>
