In this commit l added a CSS style to my navbar container and elements inside it

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     </a>
                 </li>
                 <li class="navbar-item">
-                    <a href="/" class="nabar-links">
+                    <a href="/" class="navbar-links">
                         Products
                     </a>
                 </li>
