Added some CSS style to navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul class="navbar-menu">
                 <li class="navbar-item">
                     <a href="/" class="navbar-links">
-                        Homes
+                        Home
                     </a>
                 </li>
                 <li class="navbar-item">
@@ -31,7 +31,7 @@
                         Products
                     </a>
                 </li>
-                <li class="navbar_btn">
+                <li class="navbar-btn">
                     <a href="/" class="button">
                         Sing up
                     </a>
