--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My web page</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/da268c4b43.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
         <div class="navbar-container">
-            <a href="/" id="navbar-logo">NEXT</a>
+            <a href="/" id="navbar-logo"><i class="fas fa-gem"></i> NEXT</a>
             <div class="navbar-toggle" id="mobile-menu">
                 <span class="bar"></span>
                 <span class="bar"></span>
@@ -39,5 +40,6 @@
             </ul>
         </div>
     </nav>
+<script src="app.js"></script>
 </body>
 </html>
