--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <title>My web page</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/da268c4b43.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- navbar section -->
     <nav class="navbar">
         <div class="navbar-container">
             <a href="/" id="navbar-logo"><i class="fas fa-gem"></i> NEXT</a>
@@ -40,6 +44,22 @@
             </ul>
         </div>
     </nav>
+    <!-- hero section -->
+     <div class="main">
+        <div class="main-container">
+            <div class="main-content">
+                <h1>NEXT GENERATION</h1>
+                <h2>TEXNOLOGY</h2>
+                <p>See what makes us different.</p>
+                <button class="main-btn">
+                    <a href="/">Get started</a>
+                </button>
+            </div>
+            <div class="main-img-container">
+                <img src="images/undraw_voice-messages_anpq.svg" alt="pic" id="main-img">
+            </div>
+        </div>
+     </div>
 <script src="app.js"></script>
 </body>
 </html>
