--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <h2>TEXNOLOGY</h2>
                 <p>See what makes us different.</p>
                 <button class="main-btn">
-                    <a href="/">Get started</a>
+                    <a href="/">Get Started</a>
                 </button>
             </div>
             <div class="main-img-container">
@@ -60,6 +60,23 @@
             </div>
         </div>
      </div>
+
+     <!-- Services Section -->
+      <div class="sevices">
+        <h1>See what the hype is about</h1>
+        <div class="sevices-container">
+            <div class="services-card">
+                <h2>Experience Bliss</h2>
+                <p>AI Powered Tehnology</p>
+                <button>Get Started</button>
+            </div>
+            <div class="services-card">
+                <h2>Are you ready?</h2>
+                <p>Take the leap</p>
+                <button>Get Started</button>
+            </div>
+        </div>
+      </div>
 <script src="app.js"></script>
 </body>
 </html>
