--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
      </div>
 
      <!-- Services Section -->
-      <div class="sevices">
+      <div class="services">
         <h1>See what the hype is about</h1>
-        <div class="sevices-container">
+        <div class="services-container">
             <div class="services-card">
                 <h2>Experience Bliss</h2>
                 <p>AI Powered Tehnology</p>
@@ -74,6 +74,45 @@
                 <h2>Are you ready?</h2>
                 <p>Take the leap</p>
                 <button>Get Started</button>
+            </div>
+        </div>
+      </div>
+
+      <!-- Footer section -->
+      <div class="footer-container">
+        <div class="footer-links">
+            <div class="footer-link-wrapper">
+                <div class="footer-link-items">
+                    <h2>About Us</h2>
+                    <a href="/sing_up">How it works</a>
+                    <a href="/">Testemonials</a>
+                    <a href="/">Careers</a>
+                    <a href="/">Investments</a>
+                    <a href="/">Terms of Service</a>
+                </div>
+                    <div class="footer-link-items">
+                    <h2>Contact Us</h2>
+                    <a href="/">Contact</a>
+                    <a href="/">Support</a>
+                    <a href="/">Destinations</a>
+                    <a href="/">Sponsorships</a>
+                </div>
+            </div>
+            <div class="footer-link-wrapper">
+                <div class="footer-link-items">
+                    <h2>Videos</h2>
+                    <a href="/sing_up">Submit video</a>
+                    <a href="/">Ambassadors</a>
+                    <a href="/">Agency</a>
+                    <a href="/">Influncer</a>
+                </div>
+                    <div class="footer-link-items">
+                    <h2>Social meadia</h2>
+                    <a href="/">Instagram</a>
+                    <a href="/">Facebook</a>
+                    <a href="/">Youtube</a>
+                    <a href="/">Twitter</a>
+                </div>
             </div>
         </div>
       </div>
