Added Footer section with HTML code

--- a/index.html
+++ b/index.html
@@ -115,6 +115,33 @@
                 </div>
             </div>
         </div>
+        <div class="social-meadia">
+            <div class="social-media-wrap">
+                <div class="footer-logo">
+                    <a href="/" id="footer-logo">
+                        <i class="fas fa-gem"></i>NEXT
+                    </a>
+                </div>
+                <p class="website-right">NEXT 2025. All rights reserved</p>
+                <div class="social-icons">
+                    <a href="/" class="social-icon-link", target="_blank">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                        <a href="/" class="social-icon-link", target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a href="/" class="social-icon-link", target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="/" class="social-icon-link", target="_blank">
+                        <i class="fab fa-linkein"></i>
+                    </a>
+                    <a href="/" class="social-icon-link", target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
       </div>
 <script src="app.js"></script>
 </body>
