Added CSS for the footer section

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <i class="fas fa-gem"></i>NEXT
                     </a>
                 </div>
-                <p class="website-right">NEXT 2025. All rights reserved</p>
+                <p class="website-rights">NEXT 2025. All rights reserved</p>
                 <div class="social-icons">
                     <a href="/" class="social-icon-link", target="_blank">
                         <i class="fab fa-facebook"></i>
@@ -132,9 +132,6 @@
                     </a>
                     <a href="/" class="social-icon-link", target="_blank">
                         <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="/" class="social-icon-link", target="_blank">
-                        <i class="fab fa-linkein"></i>
                     </a>
                     <a href="/" class="social-icon-link", target="_blank">
                         <i class="fab fa-youtube"></i>
