--- a/tech.html
+++ b/tech.html
@@ -52,7 +52,7 @@
                 <h2>TEXNOLOGY</h2>
                 <p>See what makes us different.</p>
                 <button class="main-btn">
-                    <a href="/">Get Started</a>
+                    <a href="/">Get started</a>
                 </button>
             </div>
             <div class="main-img-container">
